--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             </div>
             <div class="player-name">
-                Tassadar
+                Player 1
             </div>
             <div class="player-hp-bar">
                 HP: <span class="player-hp-amount">100</span>
@@ -30,7 +30,7 @@
                 
             </div>
             <div class="player-name">
-                Zeratul
+                Player 2
             </div>
             <div class="player-hp-bar">
                 HP: <span class="player-hp-amount">100</span>
