--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 Player 1
             </div>
             <div class="player-hp-bar">
-                HP: <span class="player-hp-amount">100</span>
+                Life: <span class="player-hp-amount">100</span>
             </div>
             <div class="player-mana-bar">
-                MANA: <span class="player-mana-amount">70</span>
+                Mana: <span class="player-mana-amount">70</span>
             </div>
         </div>
 
@@ -33,10 +33,10 @@
                 Player 2
             </div>
             <div class="player-hp-bar">
-                HP: <span class="player-hp-amount">100</span>
+                Life: <span class="player-hp-amount">100</span>
             </div>
             <div class="player-mana-bar">
-                MANA: <span class="player-mana-amount">70</span>
+                Mana: <span class="player-mana-amount">70</span>
             </div>
         </div>
     </div>
