Displaying other stats

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <div class="player-mana-bar">
                 Mana: <span class="player-mana-amount">70</span>
             </div>
+            <div class="player-intelligence-bar">
+                Intelligence: <span class="player-intelligence-amount">1</span>
+            </div>
+            <div class="player-defense-bar">
+                Defense: <span class="player-defense-amount">1</span>
+            </div>
+            <div class="player-criticalStrike-bar">
+                Critical Strike: <span class="player-criticalStrike-amount">1</span>
+            </div>
         </div>
 
         <div id="player-right" class="player-display">
@@ -37,6 +46,15 @@
             </div>
             <div class="player-mana-bar">
                 Mana: <span class="player-mana-amount">70</span>
+            </div>
+            <div class="player-intelligence-bar">
+                Intelligence: <span class="player-intelligence-amount">1</span>
+            </div>
+            <div class="player-defense-bar">
+                Defense: <span class="player-defense-amount">1</span>
+            </div>
+            <div class="player-criticalStrike-bar">
+                Critical Strike: <span class="player-criticalStrike-amount">1</span>
             </div>
         </div>
     </div>
