Added portraits; clearing logs; typing effect; changed visuals

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+
     <title>CyberGothic Battle</title>
     
     <script src="src/script.js" type="text/javascript" defer></script> 
@@ -12,49 +13,53 @@
     <div id="players-bar">
         <div id="player-left" class="player-display">
             <div class="player-portrait">
-
+                <img class="player-portrait-image" src='imgs/protoss.jpg' />
             </div>
-            <div class="player-name">
-                Player 1
-            </div>
-            <div class="player-hp-bar">
-                Life: <span class="player-hp-amount">100</span>
-            </div>
-            <div class="player-mana-bar">
-                Mana: <span class="player-mana-amount">5</span>
-            </div>
-            <div class="player-intelligence-bar">
-                Intelligence: <span class="player-intelligence-amount">1</span>
-            </div>
-            <div class="player-defense-bar">
-                Defense: <span class="player-defense-amount">1</span>
-            </div>
-            <div class="player-criticalStrike-bar">
-                Critical Strike: <span class="player-criticalStrike-amount">1</span>
+            <div class="player-stats">
+                <div class="player-name">
+                    Player 1
+                </div>
+                <div class="player-hp-bar">
+                    Life: <span class="player-hp-amount">100</span>
+                </div>
+                <div class="player-mana-bar">
+                    Mana: <span class="player-mana-amount">5</span>
+                </div>
+                <div class="player-intelligence-bar">
+                    Intelligence: <span class="player-intelligence-amount">1</span>
+                </div>
+                <div class="player-defense-bar">
+                    Defense: <span class="player-defense-amount">1</span>
+                </div>
+                <div class="player-criticalStrike-bar">
+                    Critical Strike: <span class="player-criticalStrike-amount">1</span>
+                </div>
             </div>
         </div>
 
         <div id="player-right" class="player-display">
+            <div class="player-stats">
+                <div class="player-name">
+                    Player 2
+                </div>
+                <div class="player-hp-bar">
+                    Life: <span class="player-hp-amount">100</span>
+                </div>
+                <div class="player-mana-bar">
+                    Mana: <span class="player-mana-amount">5</span>
+                </div>
+                <div class="player-intelligence-bar">
+                    Intelligence: <span class="player-intelligence-amount">1</span>
+                </div>
+                <div class="player-defense-bar">
+                    Defense: <span class="player-defense-amount">1</span>
+                </div>
+                <div class="player-criticalStrike-bar">
+                    Critical Strike: <span class="player-criticalStrike-amount">1</span>
+                </div>
+            </div>
             <div class="player-portrait" style="background-color: #9fbdff;">
-                
-            </div>
-            <div class="player-name">
-                Player 2
-            </div>
-            <div class="player-hp-bar">
-                Life: <span class="player-hp-amount">100</span>
-            </div>
-            <div class="player-mana-bar">
-                Mana: <span class="player-mana-amount">5</span>
-            </div>
-            <div class="player-intelligence-bar">
-                Intelligence: <span class="player-intelligence-amount">1</span>
-            </div>
-            <div class="player-defense-bar">
-                Defense: <span class="player-defense-amount">1</span>
-            </div>
-            <div class="player-criticalStrike-bar">
-                Critical Strike: <span class="player-criticalStrike-amount">1</span>
+                <img class="player-portrait-image" src='imgs/undead.jpg' />
             </div>
         </div>
     </div>
