--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
 
     <title>CyberGothic Battle</title>
-    
-    <script src="src/script.js" type="text/javascript" defer></script> 
-
 </head>
 <body>
 
@@ -68,5 +65,7 @@
 
     </div>
 
+    <script src="src/declarations.js" type="text/javascript"></script> 
+    <script src="src/main.js" type="text/javascript"></script> 
 </body>
 </html> 
