--- a/index.html
+++ b/index.html
@@ -7,63 +7,67 @@
 </head>
 <body>
 
-    <div id="players-bar">
-        <div id="player-left" class="player-display">
-            <div class="player-portrait">
-                <img class="player-portrait-image" src='imgs/protoss.jpg' />
-            </div>
-            <div class="player-stats">
-                <div class="player-name">
-                    Player 1
-                </div>
-                <div class="player-hp-bar">
-                    Life: <span class="player-hp-amount">100</span>
-                </div>
-                <div class="player-mana-bar">
-                    Mana: <span class="player-mana-amount">5</span>
-                </div>
-                <div class="player-intelligence-bar">
-                    Intelligence: <span class="player-intelligence-amount">1</span>
-                </div>
-                <div class="player-defense-bar">
-                    Defense: <span class="player-defense-amount">1</span>
-                </div>
-                <div class="player-criticalStrike-bar">
-                    Critical Strike: <span class="player-criticalStrike-amount">1</span>
-                </div>
-            </div>
-        </div>
+    <div id="start-screen">
+        <img class="player-portrait-image" src='imgs/protoss.jpg' />
+        
+    </div>
 
-        <div id="player-right" class="player-display">
-            <div class="player-stats">
-                <div class="player-name">
-                    Player 2
+    <div id = "players-battle-screen">
+        <div id="players-bar">
+            <div id="player-left" class="player-display">
+                <div class="player-portrait">
+                    <img class="player-portrait-image" src='imgs/protoss.jpg' />
                 </div>
-                <div class="player-hp-bar">
-                    Life: <span class="player-hp-amount">100</span>
-                </div>
-                <div class="player-mana-bar">
-                    Mana: <span class="player-mana-amount">5</span>
-                </div>
-                <div class="player-intelligence-bar">
-                    Intelligence: <span class="player-intelligence-amount">1</span>
-                </div>
-                <div class="player-defense-bar">
-                    Defense: <span class="player-defense-amount">1</span>
-                </div>
-                <div class="player-criticalStrike-bar">
-                    Critical Strike: <span class="player-criticalStrike-amount">1</span>
+                <div class="player-stats">
+                    <div class="player-name">
+                        Player 1
+                    </div>
+                    <div class="player-hp-bar">
+                        Life: <span class="player-hp-amount">100</span>
+                    </div>
+                    <div class="player-mana-bar">
+                        Mana: <span class="player-mana-amount">5</span>
+                    </div>
+                    <div class="player-intelligence-bar">
+                        Intelligence: <span class="player-intelligence-amount">1</span>
+                    </div>
+                    <div class="player-defense-bar">
+                        Defense: <span class="player-defense-amount">1</span>
+                    </div>
+                    <div class="player-criticalStrike-bar">
+                        Critical Strike: <span class="player-criticalStrike-amount">1</span>
+                    </div>
                 </div>
             </div>
-            <div class="player-portrait" style="background-color: #9fbdff;">
-                <img class="player-portrait-image" src='imgs/undead.jpg' />
+    
+            <div id="player-right" class="player-display">
+                <div class="player-stats">
+                    <div class="player-name">
+                        Player 2
+                    </div>
+                    <div class="player-hp-bar">
+                        Life: <span class="player-hp-amount">100</span>
+                    </div>
+                    <div class="player-mana-bar">
+                        Mana: <span class="player-mana-amount">5</span>
+                    </div>
+                    <div class="player-intelligence-bar">
+                        Intelligence: <span class="player-intelligence-amount">1</span>
+                    </div>
+                    <div class="player-defense-bar">
+                        Defense: <span class="player-defense-amount">1</span>
+                    </div>
+                    <div class="player-criticalStrike-bar">
+                        Critical Strike: <span class="player-criticalStrike-amount">1</span>
+                    </div>
+                </div>
+                <div class="player-portrait" style="background-color: #9fbdff;">
+                    <img class="player-portrait-image" src='imgs/undead.jpg' />
+                </div>
             </div>
         </div>
     </div>
 
-    <div id="terminal-log-field">
-
-    </div>
 
     <script src="src/declarations.js" type="text/javascript"></script> 
     <script src="src/main.js" type="text/javascript"></script> 
