Working with silhouette

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 
     <div id="start-screen">
-        <img class="player-portrait-image" src='imgs/protoss.jpg' />
+        <div>
+            <img class="player-portrait-image" src='imgs/protoss.jpg' />
+        </div>
         
     </div>
 
@@ -66,10 +68,20 @@
                 </div>
             </div>
         </div>
+
+        <div id="body-selection">
+
+        </div>
+
     </div>
 
 
-    <script src="src/declarations.js" type="text/javascript"></script> 
-    <script src="src/main.js" type="text/javascript"></script> 
+    <script type="text/javascript" src="silhouette-parts/main/silhouette-coordinate-map.js"></script>
+    <script type="text/javascript" src="silhouette-parts/side/silhouette-coordinate-map.js"></script>
+
+    <script src="scripts/silhouette/silhouette.js" type="text/javascript"></script> 
+    <script src="scripts/declarations.js" type="text/javascript"></script> 
+
+    <script src="scripts/main.js" type="text/javascript"></script> 
 </body>
 </html> 
