--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div id="start-screen">
         <div>
-            <img class="player-portrait-image" src='images/protoss.jpg' />
+            <!-- <img class="player-portrait-image" src='images/protoss.jpg' /> -->
         </div>
         
     </div>
