--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
             <div id="player-description-name">
                 Tassadar
             </div>
-            <div id="player-description-portrait">
-                <img id="player-description-image" src='images/protoss.jpg' />
-            </div>
+            <img id="player-description-image" src='images/protoss.jpg' />
             <div class="player-description-rating">
                 <span class="player-description-rating-name">Hero rank: </span>
                 <span id="player-rating-rank" class="player-description-rating-value">10</span>
@@ -33,7 +31,8 @@
             </div>
             
         </div>
-        <input type="button" id="start-battle-button" value="START BATTLE" />
+        
+        <button id="start-battle-button">Start battle</button> 
     </div>
 
     <div id = "players-battle-screen" hidden>
