--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/startScreenStyle.css"/>
     <meta charset="utf-8">
 
     <title>CyberGothic</title>
@@ -14,7 +15,6 @@
 
 </head>
 <body>
-
     <div id="start-screen">
         <div id="player-description">
             <div id="player-description-name">
