Worked with vs screen

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/startScreenStyle.css"/>
+    <link rel="stylesheet" type="text/css" href="css/versusScreenStyle.css"/>
     <meta charset="utf-8">
 
     <title>CyberGothic</title>
@@ -35,7 +36,11 @@
         <button id="start-battle-button">Start battle</button> 
     </div>
 
-    <div id = "players-battle-screen" hidden>
+    <div id="versus-screen">
+
+    </div>
+
+    <div id="players-battle-screen">
         <div id="players-bar">
             <div id="player-left" class="player-display">
                 <div class="player-portrait">
