--- a/index.html
+++ b/index.html
@@ -37,7 +37,46 @@
     </div>
 
     <div id="versus-screen">
+        <div id="versus-screen-player-display-top">
 
+            <div class="versus-screen-player-display-name">
+                Tassadar
+            </div>
+
+            <div class="versus-screen-player-stats">
+                <img class="versus-screen-player-portrait" src='images/protoss.jpg' />   
+                <div>
+                    <div class="player-hp-bar">
+                        Life: <span class="player-hp-amount">100</span>
+                    </div>
+                    <div class="player-mana-bar">
+                        Mana: <span class="player-mana-amount">5</span>
+                    </div>
+                </div>
+            </div>
+        </div>   
+        <div id="versus-text">
+            VS
+        </div>
+        <div id="versus-screen-player-display-bottom">
+            <div class="versus-screen-player-display-name">
+                K'Rashnar
+            </div>
+
+            <div class="versus-screen-player-stats">
+                <img class="versus-screen-player-portrait" src='images/undead.jpg' />          
+                <div>
+                    <div class="player-hp-bar">
+                        Life: <span class="player-hp-amount">100</span>
+                    </div>
+                    <div class="player-mana-bar">
+                        Mana: <span class="player-mana-amount">5</span>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <button id="start-turn-button">Start turn 1</button> 
     </div>
 
     <div id="players-battle-screen">
@@ -56,15 +95,6 @@
                     <div class="player-mana-bar">
                         Mana: <span class="player-mana-amount">5</span>
                     </div>
-                    <div class="player-intelligence-bar">
-                        Intelligence: <span class="player-intelligence-amount">1</span>
-                    </div>
-                    <div class="player-defense-bar">
-                        Defense: <span class="player-defense-amount">1</span>
-                    </div>
-                    <div class="player-criticalStrike-bar">
-                        Critical Strike: <span class="player-criticalStrike-amount">1</span>
-                    </div>
                 </div>
             </div>
     
@@ -78,15 +108,6 @@
                     </div>
                     <div class="player-mana-bar">
                         Mana: <span class="player-mana-amount">5</span>
-                    </div>
-                    <div class="player-intelligence-bar">
-                        Intelligence: <span class="player-intelligence-amount">1</span>
-                    </div>
-                    <div class="player-defense-bar">
-                        Defense: <span class="player-defense-amount">1</span>
-                    </div>
-                    <div class="player-criticalStrike-bar">
-                        Critical Strike: <span class="player-criticalStrike-amount">1</span>
                     </div>
                 </div>
                 <div class="player-portrait" style="background-color: #9fbdff;">
