--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button id="start-battle-button">Start battle</button> 
     </div>
 
-    <div id="versus-screen">
+    <div id="versus-screen" class='hidden'>
         <div id="versus-screen-player-display-top">
 
             <div class="versus-screen-player-display-name">
@@ -79,7 +79,7 @@
         <button id="start-turn-button">Start turn 1</button> 
     </div>
 
-    <div id="players-battle-screen">
+    <div id="players-battle-screen" class="hidden">
         <div id="players-bar">
             <div id="player-left" class="player-display">
                 <div class="player-portrait">
