--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
             <div id="battle-screen-selection-ability" class="hidden">
                 
+                <button id="battle-screen-button-next">Next</button> 
             </div>
 
             <div id="battle-screen-selection-body" class="hidden">
