Managing battle screen

--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
 
             <div id="battle-screen-selection-ability" class="hidden">
                 
-                <button id="battle-screen-button-next">Next</button> 
             </div>
 
-            <div id="battle-screen-selection-body" class="hidden">
+            <div id="battle-screen-selection-body-attack" class="hidden">
                 <img src="silhouette-parts/main/hollow/arm-left-hollow.png" id="arm-left-hollow-main" class="imported-data">
                 <img src="silhouette-parts/main/hollow/arm-right-hollow.png" id="arm-right-hollow-main" class="imported-data">
                 <img src="silhouette-parts/main/hollow/leg-left-hollow.png" id="leg-left-hollow-main" class="imported-data">
@@ -154,6 +153,11 @@
                 <canvas id='canvas'>
     
                 </canvas>
+            </div>
+
+            <div id='battle-screen-selection-switching'>
+                <button id="battle-screen-button-back">Back</button> 
+                <button id="battle-screen-button-next">Next</button> 
             </div>
 
         </div>
