Switching between screens

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         
-        <button id="start-battle-button">Start battle</button> 
+        <button class='switch-button' id="start-battle-button">Start battle</button> 
     </div>
 
     <div id="versus-screen" class='hidden'>
@@ -75,7 +75,7 @@
             </div>
             
         </div>
-        <button id="start-turn-button">Start turn 1</button> 
+        <button class='switch-button' id="start-turn-button">Start turn 1</button> 
     </div>
 
     <div id="battle-screen" class="hidden">
@@ -156,8 +156,8 @@
             </div>
 
             <div id='battle-screen-selection-switching'>
-                <button id="battle-screen-button-back">Back</button> 
-                <button id="battle-screen-button-next">Next</button> 
+                <button class='switch-button' id="battle-screen-button-back">Back</button> 
+                <button class='switch-button' id="battle-screen-button-next">Next</button> 
             </div>
 
         </div>
