--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
             <div id='battle-screen-selection-switching'>
                 <button class='switch-button' id="battle-screen-button-back">Back</button> 
                 <button class='switch-button' id="battle-screen-button-next">Next</button> 
+                <button class='switch-button' id="battle-screen-button-finish-turn">Finish</button> 
             </div>
 
         </div>
