Player abilities markup

--- a/index.html
+++ b/index.html
@@ -118,7 +118,18 @@
         <div id="battle-screen-selection">
 
             <div id="battle-screen-selection-ability" class="hidden">
-                
+                <div style="font-size: 30px;">
+                    Select abilities
+                </div>
+
+                <div id="battle-screen-selection-abilities-list">
+                    <button class="player-ability">
+                        Ability 1
+                    </button>
+                    <button class="player-ability">
+                        Ability 2
+                    </button>
+                </div>
             </div>
 
             <div id="battle-screen-selection-body-attack" class="hidden">
