--- a/index.html
+++ b/index.html
@@ -187,9 +187,13 @@
 
             <button class='switch-button' id="battle-screen-next-turn">Next turn</button> 
         </div>
-    
     </div>
 
+    <div id="win-screen" class="hidden">
+        <div>
+            Congrats!!! :)
+        </div>
+    </div>
     
     <script type="text/javascript" src="silhouette-parts/main/silhouette-coordinate-map.js"></script>
     <script type="text/javascript" src="silhouette-parts/side/silhouette-coordinate-map.js"></script>
