--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/versusScreenStyle.css"/>
     <link rel="stylesheet" type="text/css" href="css/battleScreen.css"/>
     <link rel="stylesheet" type="text/css" href="css/battleSummaryScreen.css"/>
+    <link rel="stylesheet" type="text/css" href="css/winScreen.css"/>
 
     <meta charset="utf-8">
 
@@ -189,9 +190,13 @@
     </div>
 
     <div id="win-screen" class="hidden">
-        <div>
-            Congrats!!! :)
+        <div id="win-screen-message">
+            Congrats, Tassadar!!! :)
         </div>
+
+        <img id="win-screen-winner-portrait" src="images/protoss.jpg" />
+        <button class='switch-button'>Return to menu</button> 
+
     </div>
     
     <script type="text/javascript" src="silhouette-parts/main/silhouette-coordinate-map.js"></script>
