--- a/index.html
+++ b/index.html
@@ -181,7 +181,10 @@
                 Summary
             </div>
 
-            <div id="battle-screen-summary-first-player-summary" class="battle-scrren-player-summary">
+            <div id="battle-screen-summary-first-player" class="battle-screen-player-summary">
+                
+            </div>
+            <div id="battle-screen-summary-second-player" class="battle-screen-player-summary">
                 
             </div>
 
