Refreshing page on win

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
 
         <img id="win-screen-winner-portrait" src="images/protoss.jpg" />
-        <button class='switch-button'>Return to menu</button> 
+        <button class='switch-button' onClick="window.location.reload(true)">Return to menu</button> 
 
     </div>
     
