--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
     <script type="text/javascript" src="silhouette-parts/main/silhouette-coordinate-map.js"></script>
     <script type="text/javascript" src="silhouette-parts/side/silhouette-coordinate-map.js"></script>
     
+    <script src="scripts/modules/delegate.js" type="text/javascript"></script> 
     <script src="scripts/htmlElements.js" type="text/javascript"></script> 
     <script src="scripts/BattleScreen/battleScreenManager.js" type="text/javascript"></script> 
     <script src="scripts/modules/config.js" type="text/javascript"></script> 
