--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     <script src="scripts/htmlElements.js" type="text/javascript"></script> 
     <script src="scripts/modules/delegate.js" type="text/javascript"></script> 
     <script src="scripts/BattleScreen/battleScreenManager.js" type="text/javascript"></script> 
+    <script src="scripts/BattleScreen/battleSelection.js" type="text/javascript"></script> 
     <script src="scripts/modules/silhouette/silhouette.js" type="text/javascript"></script> 
     <script src="scripts/modules/combat-screen.js" type="text/javascript"></script> 
     <script src="scripts/declarations.js" type="text/javascript"></script> 
