Lose screen todo

--- a/index.html
+++ b/index.html
@@ -201,6 +201,15 @@
         <button class='switch-button' onClick="window.location.reload(true)">Return to menu</button> 
 
     </div>
+
+    <div id="lose-screen" class="hidden">
+        <div id="lose-screen-message">
+            loh
+        </div>
+        <!-- TODO: create lose menu-->
+
+        <button class='switch-button' onClick="window.location.reload(true)">Return to menu</button> 
+    </div>
     
     <script type="text/javascript" src="silhouette-parts/main/silhouette-coordinate-map.js"></script>
     <script type="text/javascript" src="silhouette-parts/side/silhouette-coordinate-map.js"></script>
