--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
     <script src="scripts/modules/delegate.js" type="text/javascript"></script> 
     <script src="scripts/modules/config.js" type="text/javascript"></script> 
     <script src="scripts/htmlElements.js" type="text/javascript"></script> 
+    <script src="scripts/BattleScreen/battleManager.js" type="text/javascript"></script> 
     <script src="scripts/BattleScreen/battleSelectionPanel.js" type="text/javascript"></script> 
     <script src="scripts/BattleScreen/battleSelection.js" type="text/javascript"></script> 
     <script src="scripts/modules/silhouette/silhouette.js" type="text/javascript"></script> 
