--- a/index.html
+++ b/index.html
@@ -180,7 +180,10 @@
                 <button class='switch-button' id="battle-screen-button-next">Next</button> 
                 <button class='switch-button' id="battle-screen-button-finish-turn">Finish</button> 
             </div>
-
+            
+            <div id="battle-screen-error-message" class="hidden">
+                You dumb idiot did something wrong!
+            </div>
         </div>
 
         <div id="battle-screen-summary" class="hidden">
