--- a/index.html
+++ b/index.html
@@ -225,11 +225,14 @@
     <script type="text/javascript" src="silhouette-parts/side/silhouette-coordinate-map.js"></script>
     
     <script src="scripts/modules/delegate.js" type="text/javascript"></script> 
+    <script src="scripts/player.js" type="text/javascript"></script> 
+    <script src="scripts/skill.js" type="text/javascript"></script> 
     <script src="scripts/htmlElements.js" type="text/javascript"></script> 
     <script src="scripts/BattleScreen/battleSelectionPanel.js" type="text/javascript"></script> 
     <script src="scripts/BattleScreen/battleSelection.js" type="text/javascript"></script> 
     <script src="scripts/modules/silhouette/silhouette.js" type="text/javascript"></script> 
     <script src="scripts/modules/body-screen.js" type="text/javascript"></script> 
+
     <script src="scripts/declarations.js" type="text/javascript"></script> 
 
     <script src="scripts/main.js" type="text/javascript"></script> 
