--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
     <script type="text/javascript" src="silhouette-parts/main/silhouette-coordinate-map.js"></script>
     <script type="text/javascript" src="silhouette-parts/side/silhouette-coordinate-map.js"></script>
     
-    <script src="scripts/htmlElements.js" type="text/javascript"></script> 
     <script src="scripts/modules/jsExtensions.js" type="text/javascript"></script> 
+    <script src="scripts/htmlElements.js" type="text/javascript"></script> 
 
     <script src="scripts/player.js" type="text/javascript"></script> 
     <script src="scripts/skill.js" type="text/javascript"></script> 
@@ -234,6 +234,8 @@
     <script src="scripts/modules/silhouette/silhouette.js" type="text/javascript"></script> 
     <script src="scripts/modules/body-screen.js" type="text/javascript"></script> 
 
+    <script src="scripts/game-ui-handling.js" type="text/javascript"></script> 
+    
     <script src="scripts/declarations.js" type="text/javascript"></script> 
 
     <script src="scripts/main.js" type="text/javascript"></script> 
