--- a/index.html
+++ b/index.html
@@ -224,18 +224,18 @@
     <script type="text/javascript" src="silhouette-parts/main/silhouette-coordinate-map.js"></script>
     <script type="text/javascript" src="silhouette-parts/side/silhouette-coordinate-map.js"></script>
     
-    <script src="scripts/modules/jsExtensions.js" type="text/javascript"></script> 
-    <script src="scripts/htmlElements.js" type="text/javascript"></script> 
+    <script src="scripts/modules/js-extensions.js" type="text/javascript"></script> 
+    <script src="scripts/html-elements.js" type="text/javascript"></script> 
 
     <script src="scripts/player.js" type="text/javascript"></script> 
     <script src="scripts/skill.js" type="text/javascript"></script> 
-    <script src="scripts/battleScreen/battleSelectionPanel.js" type="text/javascript"></script> 
-    <script src="scripts/battleScreen/battleSelection.js" type="text/javascript"></script> 
+    <script src="scripts/battleScreen/battle-selection-panel.js" type="text/javascript"></script> 
+    <script src="scripts/battleScreen/battle-selection.js" type="text/javascript"></script> 
     <script src="scripts/modules/silhouette/silhouette.js" type="text/javascript"></script> 
     <script src="scripts/modules/body-screen.js" type="text/javascript"></script> 
 
     <script src="scripts/game-ui-handling.js" type="text/javascript"></script> 
-    
+
     <script src="scripts/declarations.js" type="text/javascript"></script> 
 
     <script src="scripts/main.js" type="text/javascript"></script> 
