Start screen player info is loaded

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <div id="start-screen">
         <div id="player-description">
             <div id="player-description-name">
-                Tassadar
+                
             </div>
-            <img id="player-description-image" src='images/protoss.jpg' />
+            <img id="player-description-image" src='' />
             <div class="player-description-rating">
                 <span class="player-description-rating-name">Hero rank: </span>
-                <span id="player-rating-rank" class="player-description-rating-value">10</span>
+                <span id="player-rating-rank" class="player-description-rating-value"></span>
             </div>
             <div class="player-description-rating">
                 <span class="player-description-rating-name">Battles won: </span>
-                <span id="player-rating-wins" class="player-description-rating-value">23</span>
+                <span id="player-rating-wins" class="player-description-rating-value"></span>
             </div>
         </div>
         
