--- a/index.html
+++ b/index.html
@@ -229,7 +229,13 @@
 
     <script src="scripts/player.js" type="text/javascript"></script> 
     <script src="scripts/skill.js" type="text/javascript"></script> 
+    
+    <script src="scripts/screens/start-screen.js" type="text/javascript"></script> 
+    <script src="scripts/screens/versus-screen.js" type="text/javascript"></script> 
     <script src="scripts/screens/battle-screen.js" type="text/javascript"></script> 
+    <script src="scripts/screens/win-screen.js" type="text/javascript"></script> 
+    <script src="scripts/screens/lose-screen.js" type="text/javascript"></script> 
+
     <script src="scripts/modules/silhouette/silhouette.js" type="text/javascript"></script> 
     <script src="scripts/modules/body-screen.js" type="text/javascript"></script> 
 
