--- a/index.html
+++ b/index.html
@@ -220,6 +220,15 @@
 
         <button class='switch-button' onClick="window.location.reload(true)">Return to menu</button> 
     </div>
+
+    <div id="draw-screen" class="hidden">
+        <div id="draw-screen-message">
+            draw!
+        </div>
+        <!-- TODO: create lose menu-->
+
+        <button class='switch-button' onClick="window.location.reload(true)">Return to menu</button> 
+    </div>
     
     <script type="text/javascript" src="silhouette-parts/main/silhouette-coordinate-map.js"></script>
     <script type="text/javascript" src="silhouette-parts/side/silhouette-coordinate-map.js"></script>
