Updating info on versus screen

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
     <div id="versus-screen" class='hidden'>
         <div id="versus-screen-player-display-top" class="versus-screen-player-display">
             <div class="versus-screen-player-display-name">
-                Tassadar
+                
             </div>
             <div class="versus-screen-player-stats">
-                <img class="versus-screen-player-portrait" src='images/protoss.jpg' />   
+                <img class="versus-screen-player-portrait" src='' />   
                 <div>
                     <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount">100</span>
+                        Life: <span class="player-hp-amount"></span>
                     </div>
                     <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount">5</span>
+                        Mana: <span class="player-mana-amount"></span>
                     </div>
                 </div>
             </div>
@@ -61,17 +61,17 @@
         </div>
         <div id="versus-screen-player-display-bottom" class="versus-screen-player-display">
             <div class="versus-screen-player-display-name">
-                K'Rashnar
+                
             </div>
 
             <div class="versus-screen-player-stats">
-                <img class="versus-screen-player-portrait" src='images/undead.jpg' />          
+                <img class="versus-screen-player-portrait" src='' />          
                 <div>
                     <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount">100</span>
+                        Life: <span class="player-hp-amount"></span>
                     </div>
                     <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount">5</span>
+                        Mana: <span class="player-mana-amount"></span>
                     </div>
                 </div>
             </div>
