--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
 
     <div id="win-screen" class="hidden">
         <div id="win-screen-message">
-            Congrats, Tassadar!!! :)
+            
         </div>
 
-        <img id="win-screen-winner-portrait" src="images/protoss.jpg" />
+        <img id="win-screen-winner-portrait" src="" />
         <button class='switch-button' onClick="window.location.reload(true)">Return to menu</button> 
 
     </div>
