Showing lose screen

--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
             loh
         </div>
         <!-- TODO: create lose menu-->
-
+        
+        <img id="lose-screen-loser-portrait" src="" />
         <button class='switch-button' onClick="window.location.reload(true)">Return to menu</button> 
     </div>
 
