Lose screen style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="css/battleScreen.css"/>
     <link rel="stylesheet" type="text/css" href="css/battleSummaryScreen.css"/>
     <link rel="stylesheet" type="text/css" href="css/winScreen.css"/>
+    <link rel="stylesheet" type="text/css" href="css/loseScreen.css"/>
+    <link rel="stylesheet" type="text/css" href="css/drawScreen.css"/>
 
     <meta charset="utf-8">
 
