--- a/index.html
+++ b/index.html
@@ -218,7 +218,6 @@
         <div id="lose-screen-message">
             loh
         </div>
-        <!-- TODO: create lose menu-->
         
         <img id="lose-screen-loser-portrait" src="" />
         <button class='switch-button' onClick="window.location.reload(true)">Return to menu</button> 
@@ -226,9 +225,11 @@
 
     <div id="draw-screen" class="hidden">
         <div id="draw-screen-message">
-            draw!
+            Draw!
         </div>
-        <!-- TODO: create lose menu-->
+        <div id='draw-screen-player-portraits'>
+
+        </div>
 
         <button class='switch-button' onClick="window.location.reload(true)">Return to menu</button> 
     </div>
@@ -247,6 +248,7 @@
     <script src="scripts/screens/battle-screen.js" type="text/javascript"></script> 
     <script src="scripts/screens/win-screen.js" type="text/javascript"></script> 
     <script src="scripts/screens/lose-screen.js" type="text/javascript"></script> 
+    <script src="scripts/screens/draw-screen.js" type="text/javascript"></script> 
 
     <script src="scripts/modules/silhouette/silhouette.js" type="text/javascript"></script> 
     <script src="scripts/modules/body-screen.js" type="text/javascript"></script> 
