--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/loseScreen.css"/>
     <link rel="stylesheet" type="text/css" href="css/drawScreen.css"/>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="height=device-height, initial-scale=1.0" />
 
     <title>CyberGothic</title>
 
