--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </head>
 <body>
-    <div id="start-screen">
+    <div id="start-screen" class='hidden'>
         <div id="player-description">
             <div id="player-description-name">
                 
