--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="scripts/declarations.js" type="text/javascript" defer></script> 
 
     <script type="text/javascript" src="scripts/main.js" type="text/javascript" defer></script> 
-    
+
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/startScreenStyle.css"/>
     <link rel="stylesheet" type="text/css" href="css/versusScreenStyle.css"/>
@@ -107,18 +107,16 @@
     <div id="battle-screen" class="hidden">
         <div id="players-bar">
             <div id="player-left" class="player-display">
-                <div class="player-portrait">
-                    <img class="player-portrait-image" src='images/protoss.jpg' />
-                </div>
+                <img class="player-image" src='' />
                 <div class="player-stats">
                     <div class="player-name">
                         Player 1
                     </div>
                     <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount">100</span>
+                        Life: <span class="player-hp-amount"></span>
                     </div>
                     <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount">5</span>
+                        Mana: <span class="player-mana-amount"></span>
                     </div>
                 </div>
             </div>
@@ -129,15 +127,13 @@
                         Player 2
                     </div>
                     <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount">100</span>
+                        Life: <span class="player-hp-amount"></span>
                     </div>
                     <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount">5</span>
+                        Mana: <span class="player-mana-amount"></span>
                     </div>
                 </div>
-                <div class="player-portrait" style="background-color: #9fbdff;">
-                    <img class="player-portrait-image" src='images/undead.jpg' />
-                </div>
+                <img class="player-image" src='' />
             </div>
         </div>
 
