More adaptive battle screen (ability selection)

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
             </div>
         </div>
 
-        <div id="battle-screen-selection">
+        <div id="battle-screen-selections">
             <div id="battle-screen-selection-ability" class="hidden">
-                <div style="font-size: 30px;">
+                <div>
                     Select abilities
                 </div>
 
@@ -149,7 +149,7 @@
             </div>
 
             <div id="battle-screen-selection-body-attack" class="battle-screen-selection-body hidden">
-                <div class="selection-body-title">
+                <div>
                     Choose body part to ATTACK
                 </div>
                 <img src="silhouette-parts/main/hollow/arm-left-hollow.png" id="arm-left-hollow-main" class="imported-data">
@@ -172,7 +172,7 @@
             </div>
 
             <div id="battle-screen-selection-body-defense" class="battle-screen-selection-body hidden">
-                <div class="selection-body-title">
+                <div>
                     Choose body part to DEFEND
                 </div>
                 
