More adaptive battle summary

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </div>
 
         <div id="battle-screen-summary" class="hidden">
-            <div id="summary-text">
+            <div>
                 Summary
             </div>
 
