--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" type="text/css" href="css/drawScreen.css"/>
 </head>
 <body>
-    <div id="start-screen">
+    <div id="start-screen" class='hidden'>
         <div id="player-description">
             <div id="player-description-name">
                 
