Progress bars for players

--- a/index.html
+++ b/index.html
@@ -71,12 +71,8 @@
             <div class="versus-screen-player-stats">
                 <img class="versus-screen-player-portrait" src='' />   
                 <div>
-                    <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount"></span>
-                    </div>
-                    <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount"></span>
-                    </div>
+                    <progress class="player-hp-bar" value="100" max="100"></progress>
+                    <progress class="player-mana-bar" value="100" max="100"></progress>
                 </div>
             </div>
         </div>   
@@ -90,14 +86,8 @@
 
             <div class="versus-screen-player-stats">
                 <img class="versus-screen-player-portrait" src='' />          
-                <div>
-                    <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount"></span>
-                    </div>
-                    <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount"></span>
-                    </div>
-                </div>
+                <progress class="player-hp-bar" value="100" max="100"></progress>
+                <progress class="player-mana-bar" value="100" max="100"></progress>
             </div>
             
         </div>
@@ -112,12 +102,8 @@
                     <div class="player-name">
                         Player 1
                     </div>
-                    <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount"></span>
-                    </div>
-                    <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount"></span>
-                    </div>
+                    <progress class="player-hp-bar" value="100" max="100"></progress>
+                    <progress class="player-mana-bar" value="100" max="100"></progress>
                 </div>
             </div>
     
@@ -126,12 +112,8 @@
                     <div class="player-name">
                         Player 2
                     </div>
-                    <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount"></span>
-                    </div>
-                    <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount"></span>
-                    </div>
+                    <progress class="player-hp-bar" value="100" max="100"></progress>
+                    <progress class="player-mana-bar" value="100" max="100"></progress>
                 </div>
                 <img class="player-image" src='' />
             </div>
