Progress bars on versus screen

--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
             </div>
 
             <div class="versus-screen-player-stats">
-                <img class="versus-screen-player-portrait" src='' />          
-                <progress class="player-hp-bar" value="100" max="100"></progress>
-                <progress class="player-mana-bar" value="100" max="100"></progress>
+                <img class="versus-screen-player-portrait" src='' />    
+                <div>      
+                    <progress class="player-hp-bar" value="100" max="100"></progress>
+                    <progress class="player-mana-bar" value="100" max="100"></progress>
+                </div>
             </div>
             
         </div>
