Reset progress bar changes

--- a/index.html
+++ b/index.html
@@ -71,8 +71,12 @@
             <div class="versus-screen-player-stats">
                 <img class="versus-screen-player-portrait" src='' />   
                 <div>
-                    <progress class="player-hp-bar" value="100" max="100"></progress>
-                    <progress class="player-mana-bar" value="100" max="100"></progress>
+                    <div class="player-hp-bar">
+                        Life: <span class="player-hp-amount"></span>
+                    </div>
+                    <div class="player-mana-bar">
+                        Mana: <span class="player-mana-amount"></span>
+                    </div>
                 </div>
             </div>
         </div>   
@@ -85,10 +89,14 @@
             </div>
 
             <div class="versus-screen-player-stats">
-                <img class="versus-screen-player-portrait" src='' />    
-                <div>      
-                    <progress class="player-hp-bar" value="100" max="100"></progress>
-                    <progress class="player-mana-bar" value="100" max="100"></progress>
+                <img class="versus-screen-player-portrait" src='' />          
+                <div>
+                    <div class="player-hp-bar">
+                        Life: <span class="player-hp-amount"></span>
+                    </div>
+                    <div class="player-mana-bar">
+                        Mana: <span class="player-mana-amount"></span>
+                    </div>
                 </div>
             </div>
             
@@ -104,8 +112,12 @@
                     <div class="player-name">
                         Player 1
                     </div>
-                    <progress class="player-hp-bar" value="100" max="100"></progress>
-                    <progress class="player-mana-bar" value="100" max="100"></progress>
+                    <div class="player-hp-bar">
+                        Life: <span class="player-hp-amount"></span>
+                    </div>
+                    <div class="player-mana-bar">
+                        Mana: <span class="player-mana-amount"></span>
+                    </div>
                 </div>
             </div>
     
@@ -114,8 +126,12 @@
                     <div class="player-name">
                         Player 2
                     </div>
-                    <progress class="player-hp-bar" value="100" max="100"></progress>
-                    <progress class="player-mana-bar" value="100" max="100"></progress>
+                    <div class="player-hp-bar">
+                        Life: <span class="player-hp-amount"></span>
+                    </div>
+                    <div class="player-mana-bar">
+                        Mana: <span class="player-mana-amount"></span>
+                    </div>
                 </div>
                 <img class="player-image" src='' />
             </div>
