--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
             </div>
             <div class="versus-screen-player-stats">
                 <img class="versus-screen-player-portrait" src='' />   
-                <div>
+                <div style="width: 100%">
                     <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount"></span>
+                        <div class="player-hp-amount"></div>
                     </div>
                     <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount"></span>
+                        <div class="player-mana-amount"></div>
                     </div>
                 </div>
             </div>
@@ -90,12 +90,12 @@
 
             <div class="versus-screen-player-stats">
                 <img class="versus-screen-player-portrait" src='' />          
-                <div>
+                <div style="width: 100%">
                     <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount"></span>
+                        <div class="player-hp-amount"></div>
                     </div>
                     <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount"></span>
+                        <div class="player-mana-amount"></div>
                     </div>
                 </div>
             </div>
@@ -113,10 +113,10 @@
                         Player 1
                     </div>
                     <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount"></span>
+                        <div class="player-hp-amount"></div>
                     </div>
                     <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount"></span>
+                        <div class="player-mana-amount"></div>
                     </div>
                 </div>
             </div>
@@ -127,10 +127,10 @@
                         Player 2
                     </div>
                     <div class="player-hp-bar">
-                        Life: <span class="player-hp-amount"></span>
+                        <div class="player-hp-amount"></div>
                     </div>
                     <div class="player-mana-bar">
-                        Mana: <span class="player-mana-amount"></span>
+                        <div class="player-mana-amount"></div>
                     </div>
                 </div>
                 <img class="player-image" src='' />
