--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 <img class="versus-screen-player-portrait" src='' />   
                 <div style="width: 100%">
                     <div class="player-hp-bar">
-                        <div class="player-hp-amount"></div>
+                        <div class="player-hp-amount">Life</div>
                     </div>
                     <div class="player-mana-bar">
-                        <div class="player-mana-amount"></div>
+                        <div class="player-mana-amount">Mana</div>
                     </div>
                 </div>
             </div>
@@ -92,10 +92,10 @@
                 <img class="versus-screen-player-portrait" src='' />          
                 <div style="width: 100%">
                     <div class="player-hp-bar">
-                        <div class="player-hp-amount"></div>
+                        <div class="player-hp-amount">Life</div>
                     </div>
                     <div class="player-mana-bar">
-                        <div class="player-mana-amount"></div>
+                        <div class="player-mana-amount">Mana</div>
                     </div>
                 </div>
             </div>
@@ -113,10 +113,10 @@
                         Player 1
                     </div>
                     <div class="player-hp-bar">
-                        <div class="player-hp-amount"></div>
+                        <div class="player-hp-amount">Life</div>
                     </div>
                     <div class="player-mana-bar">
-                        <div class="player-mana-amount"></div>
+                        <div class="player-mana-amount">Mana</div>
                     </div>
                 </div>
             </div>
@@ -127,10 +127,10 @@
                         Player 2
                     </div>
                     <div class="player-hp-bar">
-                        <div class="player-hp-amount"></div>
+                        <div class="player-hp-amount">Life</div>
                     </div>
                     <div class="player-mana-bar">
-                        <div class="player-mana-amount"></div>
+                        <div class="player-mana-amount">Mana</div>
                     </div>
                 </div>
                 <img class="player-image" src='' />
