Silhouette class, extending it

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="scripts/screens/lose-screen.js" type="text/javascript" defer></script> 
     <script type="text/javascript" src="scripts/screens/draw-screen.js" type="text/javascript" defer></script> 
 
+    <script type="text/javascript" src="scripts/modules/silhouettes/silhouette.js" type="text/javascript" defer></script> 
     <script type="text/javascript" src="scripts/modules/silhouettes/attack-silhouette.js" type="text/javascript" defer></script> 
     <script type="text/javascript" src="scripts/modules/silhouettes/defense-silhouette.js" type="text/javascript" defer></script> 
     <script type="text/javascript" src="scripts/modules/body-screen.js" type="text/javascript" defer></script> 
