--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                     </div>
                     <div class="player-hp-bar">
                         <div class="player-hp-amount"></div>
+                        <div style="position: relative; top: -15px">Life</div>
                     </div>
                     <div class="player-mana-bar">
                         <div class="player-mana-amount"></div>
