--- a/index.html
+++ b/index.html
@@ -116,10 +116,11 @@
                     </div>
                     <div class="player-hp-bar">
                         <div class="player-hp-amount"></div>
-                        <div style="position: relative; top: -15px">Life</div>
+                        <div class="player-bar-text">Life</div>
                     </div>
                     <div class="player-mana-bar">
                         <div class="player-mana-amount"></div>
+                        <div class="player-bar-text">Mana</div>
                     </div>
                 </div>
             </div>
@@ -131,9 +132,11 @@
                     </div>
                     <div class="player-hp-bar">
                         <div class="player-hp-amount"></div>
+                        <div class="player-bar-text">Life</div>
                     </div>
                     <div class="player-mana-bar">
                         <div class="player-mana-amount"></div>
+                        <div class="player-bar-text">Mana</div>
                     </div>
                 </div>
                 <img class="player-image" src='' />
