--- a/index.html
+++ b/index.html
@@ -114,12 +114,16 @@
                     <div class="player-name">
                         Player 1
                     </div>
-                    <div class="player-hp-bar">
-                        <div class="player-hp-amount"></div>
+                    <div class='player-bar-container'>
+                        <div class="player-hp-bar">
+                            <div class="player-hp-amount"></div>
+                        </div>
                         <div class="player-bar-text">Life</div>
                     </div>
-                    <div class="player-mana-bar">
-                        <div class="player-mana-amount"></div>
+                    <div class='player-bar-container'>
+                        <div class="player-mana-bar">
+                            <div class="player-mana-amount"></div>
+                        </div>
                         <div class="player-bar-text">Mana</div>
                     </div>
                 </div>
@@ -130,12 +134,16 @@
                     <div class="player-name">
                         Player 2
                     </div>
-                    <div class="player-hp-bar">
-                        <div class="player-hp-amount"></div>
+                    <div class='player-bar-container'>
+                        <div class="player-hp-bar">
+                            <div class="player-hp-amount"></div>
+                        </div>
                         <div class="player-bar-text">Life</div>
                     </div>
-                    <div class="player-mana-bar">
-                        <div class="player-mana-amount"></div>
+                    <div class='player-bar-container'>
+                        <div class="player-mana-bar">
+                            <div class="player-mana-amount"></div>
+                        </div>
                         <div class="player-bar-text">Mana</div>
                     </div>
                 </div>
