--- a/index.html
+++ b/index.html
@@ -73,11 +73,17 @@
             <div class="versus-screen-player-stats">
                 <img class="versus-screen-player-portrait" src='' />   
                 <div style="width: 100%">
-                    <div class="player-hp-bar">
-                        <div class="player-hp-amount">Life</div>
+                    <div class='player-bar-container'>
+                        <div class="player-hp-bar">
+                            <div class="player-hp-amount"></div>
+                        </div>
+                        <div class="player-bar-text">Life</div>
                     </div>
-                    <div class="player-mana-bar">
-                        <div class="player-mana-amount">Mana</div>
+                    <div class='player-bar-container'>
+                        <div class="player-mana-bar">
+                            <div class="player-mana-amount"></div>
+                        </div>
+                        <div class="player-bar-text">Mana</div>
                     </div>
                 </div>
             </div>
@@ -93,11 +99,17 @@
             <div class="versus-screen-player-stats">
                 <img class="versus-screen-player-portrait" src='' />          
                 <div style="width: 100%">
-                    <div class="player-hp-bar">
-                        <div class="player-hp-amount">Life</div>
+                    <div class='player-bar-container'>
+                        <div class="player-hp-bar">
+                            <div class="player-hp-amount"></div>
+                        </div>
+                        <div class="player-bar-text">Life</div>
                     </div>
-                    <div class="player-mana-bar">
-                        <div class="player-mana-amount">Mana</div>
+                    <div class='player-bar-container'>
+                        <div class="player-mana-bar">
+                            <div class="player-mana-amount"></div>
+                        </div>
+                        <div class="player-bar-text">Mana</div>
                     </div>
                 </div>
             </div>
