--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                         <div class="player-hp-bar">
                             <div class="player-hp-amount"></div>
                         </div>
-                        <div class="player-bar-text">Life</div>
+                        <div class="player-bar-text player-hp-text">Life</div>
                     </div>
                     <div class='player-bar-container'>
                         <div class="player-mana-bar">
                             <div class="player-mana-amount"></div>
                         </div>
-                        <div class="player-bar-text">Mana</div>
+                        <div class="player-bar-text player-mana-text">Mana</div>
                     </div>
                 </div>
             </div>
@@ -103,13 +103,13 @@
                         <div class="player-hp-bar">
                             <div class="player-hp-amount"></div>
                         </div>
-                        <div class="player-bar-text">Life</div>
+                        <div class="player-bar-text player-hp-text">Life</div>
                     </div>
                     <div class='player-bar-container'>
                         <div class="player-mana-bar">
                             <div class="player-mana-amount"></div>
                         </div>
-                        <div class="player-bar-text">Mana</div>
+                        <div class="player-bar-text player-mana-text">Mana</div>
                     </div>
                 </div>
             </div>
@@ -130,13 +130,13 @@
                         <div class="player-hp-bar">
                             <div class="player-hp-amount"></div>
                         </div>
-                        <div class="player-bar-text">Life</div>
+                        <div class="player-bar-text player-hp-text">Life</div>
                     </div>
                     <div class='player-bar-container'>
                         <div class="player-mana-bar">
                             <div class="player-mana-amount"></div>
                         </div>
-                        <div class="player-bar-text">Mana</div>
+                        <div class="player-bar-text player-mana-text">Mana</div>
                     </div>
                 </div>
             </div>
@@ -150,13 +150,13 @@
                         <div class="player-hp-bar">
                             <div class="player-hp-amount"></div>
                         </div>
-                        <div class="player-bar-text">Life</div>
+                        <div class="player-bar-text player-hp-text">Life</div>
                     </div>
                     <div class='player-bar-container'>
                         <div class="player-mana-bar">
                             <div class="player-mana-amount"></div>
                         </div>
-                        <div class="player-bar-text">Mana</div>
+                        <div class="player-bar-text player-mana-text">Mana</div>
                     </div>
                 </div>
                 <img class="player-image" src='' />
