Better text in bars

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="scripts/player.js" type="text/javascript" defer></script> 
     <script type="text/javascript" src="scripts/skill.js" type="text/javascript" defer></script> 
     
+    <script type="text/javascript" src="scripts/screens/player-display.js" type="text/javascript" defer></script> 
     <script type="text/javascript" src="scripts/screens/start-screen.js" type="text/javascript" defer></script> 
     <script type="text/javascript" src="scripts/screens/versus-screen.js" type="text/javascript" defer></script> 
     <script type="text/javascript" src="scripts/screens/battle-screen.js" type="text/javascript" defer></script> 
