--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="height=device-height, initial-scale=1.0" />
