--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous">
     </script>
+    <!--
     <script src="silhouette-parts/main/silhouette-coordinate-map.js" defer></script>
     <script src="silhouette-parts/side/silhouette-coordinate-map.js" defer></script>
     
@@ -35,7 +36,7 @@
 
     <script src="scripts/declarations.js" defer></script> 
 
-    <script src="scripts/main.js" defer></script> 
+    <script src="scripts/main.js" defer></script> -->
 
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/startScreenStyle.css"/>
@@ -47,10 +48,25 @@
     <link rel="stylesheet" type="text/css" href="css/drawScreen.css"/>
 </head>
 <body>
+    <div style="position: absolute; top: 100px; left: 50px">
+        <button class="favorite styled"
+        type="button">
+    Add to favorites
+    </button>
+    </div>
+    <div style="position: absolute; top: 100px; left: 50px">
+        <button class="favorite styled"
+        type="button">
+    Add to favorites
+    </button>
+    </div>
     <button class="favorite styled"
         type="button">
     Add to favorites
-</button>
+    </button>
+
+    <input class="favorite styled"
+        type="button" value="input" />
 
 </body>
 </html> 
